# asr-hotword

./: README.md  run.sh
src/: CMakeLists.txt
src/cmake/: gflags.cmake  glog.cmake  openfst.cmake
src/hotword/: context_graph.cc  context_graph.h
src/patch/: CPPLINT.cfg
src/patch/openfst/src/include/fst/: log.h
src/utils/: string.cc  string.h
